--- a/src/pages/Dashboard/AlertBox/options.scss
+++ b/src/pages/Dashboard/AlertBox/options.scss
@@ -51,7 +51,35 @@
 
       .wasd-input-wrapper {
         padding-left: 10px;
+        width: calc(100% - 38px);
       }
     }
+
+    .tooltip_wrapper {
+      width: 20px;
+      height: 20px;
+      display: flex;
+      font-size: 12px;
+      font-weight: 800;
+      justify-content: center;
+      align-items: center;
+      color: rgba(255, 255, 255, 0.32);
+      border: 3px solid rgba(255, 255, 255, 0.32);
+      margin: 10px;
+      border-radius: 25px;
+    }
   }
+}
+
+.copy-input {
+  position: absolute;
+  z-index: 1;
+  top: 0px;
+  left: 0px;
+  bottom: 0px;
+  right: 0px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 4px;
 }
