--- a/src/components/UI/AlertBox/custom.css
+++ b/src/components/UI/AlertBox/custom.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@800&display=swap');
+
+
 .widget-AlertBox {
   position: relative;
 }
