--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,6 @@
 }
 
 body {
-  background-color: #0a1730;
   color: var(--wasd-color-text-prime);
   font-weight: 400;
   font-family: Montserrat,sans-serif;
@@ -25,6 +24,10 @@ body {
   width: 100%;
   flex-direction: column;
   position: absolute;
+}
+
+.wrapper:not(.alert_mode) {
+  background-color: #0a1730;
 }
 
 footer {
