--- a/src/components/UI/FilesGallery/dropdrag-zone.scss
+++ b/src/components/UI/FilesGallery/dropdrag-zone.scss
@@ -1,6 +1,6 @@
-.asset-dragdrop {
-  // position: absolute;
-}
+// .asset-dragdrop {
+//   position: absolute;
+// }
 
 .asset-dragdrop-zone {
   position: relative;
