--- a/src/pages/Dashboard/AlertBox/options.scss
+++ b/src/pages/Dashboard/AlertBox/options.scss
@@ -2,12 +2,16 @@
   padding: 4px 0;
   margin: 0;
   // height: 46px;
-  height: 50px;
+  // height: 50px;
+  display: flex;
 
   .left {
     width: 25%;
-    padding-top: 10px;
+    // padding-top: 10px;
     float: left;
+
+    display: flex;
+    align-items: center;
 
     label {
       color: #bdc2c4;
@@ -19,12 +23,14 @@
     float: left;
     width: 75%;
 
+    display: grid;
+    align-items: center;
+
     .split {
-      // display: inline-block;
+      display: flex;
 
       & > div {
         width: 48.71%;
-        display: inline-block;
         vertical-align: middle;
         position: relative;
         margin-right: 12px;
@@ -32,6 +38,10 @@
         &:last-child {
           margin-right: 0;
         }
+      }
+
+      .preview {
+        align-items: center;
       }
     }
 
@@ -73,6 +83,18 @@
   }
 }
 
+@media (max-width: 992px) {
+  .row {
+    .left {
+      width: 30%;
+    }
+    .right {
+      width: 70%;
+      margin-left: 15px;
+    }
+  }
+}
+
 .copy-input {
   position: absolute;
   z-index: 1;
@@ -83,6 +105,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  text-align: center;
   border-radius: 4px;
 }
 
