--- a/src/App.css
+++ b/src/App.css
@@ -7,14 +7,14 @@
 }
 
 :root {
-  --alert-bg: 'transparent'
+  --alert-bg: "transparent";
 }
 
 body {
   background-color: var(--alert-bg);
   color: var(--wasd-color-text-prime);
   font-weight: 400;
-  font-family: Montserrat,sans-serif;
+  font-family: Montserrat, sans-serif;
   font-size: 14px;
 
   overflow: hidden;
@@ -47,12 +47,12 @@ footer {
 div::-webkit-scrollbar {
   width: 8px;
   height: 8px;
-  background: rgba(var(--wasd-color-switch--rgb),.24);
+  background: rgba(var(--wasd-color-switch--rgb), 0.24);
   border-radius: 0.4rem 0.4rem 0.4rem 0.4rem;
 }
 
 div::-webkit-scrollbar-thumb {
-  background: rgba(var(--wasd-color-switch--rgb),.48);
+  background: rgba(var(--wasd-color-switch--rgb), 0.48);
   border-radius: 0.4rem 0.4rem 0.4rem 0.4rem;
 }
 
@@ -107,10 +107,10 @@ section > .item {
 
 section ol,
 section ul {
-  color: rgba(var(--color-system-white),.8);
+  color: rgba(var(--color-system-white), 0.8);
   font-size: 16px;
   line-height: 24px;
-  letter-spacing: .02px;
+  letter-spacing: 0.02px;
   display: block;
   /*list-style-type: decimal;*/
   margin-block-start: 1em;
@@ -128,24 +128,24 @@ section .block .item__title {
   font-weight: 500;
   font-size: 20px;
   line-height: 26px;
-  letter-spacing: .02px;
+  letter-spacing: 0.02px;
   color: rgb(var(--color-system-white));
 }
 section .block .item__descr {
   padding-top: 16px;
-  color: rgba(var(--color-system-white),.8);
+  color: rgba(var(--color-system-white), 0.8);
   font-size: 16px;
   line-height: 24px;
-  letter-spacing: .012px;
+  letter-spacing: 0.012px;
 }
 section .block .item__border {
-  border-top: 1px solid rgba(var(--wasd-color-switch--rgb),.24);
+  border-top: 1px solid rgba(var(--wasd-color-switch--rgb), 0.24);
   margin: 10px 0 10px 0;
 }
 section .block .descr {
   font-size: 20px;
   line-height: 32px;
-  letter-spacing: .02px;
+  letter-spacing: 0.02px;
 }
 
 .main-section {
@@ -176,7 +176,7 @@ section .block .descr {
 
 .react-slideshow-container .default-nav {
   opacity: 0;
-  transition: opacity .25s;
+  transition: opacity 0.25s;
 }
 
 .react-slideshow-container:hover .default-nav,
@@ -209,22 +209,24 @@ section .block .descr {
 }
 
 .main-section .buttons {
-  display: flex!important;
+  display: flex !important;
   flex-direction: row;
   width: 100%;
 }
 
 .button-big.blue:not([disabled]) {
   border: none;
-  background: radial-gradient(90.57% 139.63% at 94.34% 6.25%,#59acff 0,#1a75ff 100%);
-  box-shadow: 0 18px 30px -12px rgba(0,94,255,.35);
+  background: radial-gradient(90.57% 139.63% at 94.34% 6.25%, #59acff 0, #1a75ff 100%);
+  box-shadow: 0 18px 30px -12px rgba(0, 94, 255, 0.35);
 }
 .button-big.blue:not([disabled]):hover {
-  background: linear-gradient(0deg,rgba(var(--color-system-white),.2),rgba(var(--color-system-white),.2)),radial-gradient(90.57% 139.63% at 94.34% 6.25%,#1a8cff 0,#1a75ff 100%);
-  box-shadow: 0 24px 36px -12px rgba(0,94,255,.35);
+  background: linear-gradient(0deg, rgba(var(--color-system-white), 0.2), rgba(var(--color-system-white), 0.2)),
+    radial-gradient(90.57% 139.63% at 94.34% 6.25%, #1a8cff 0, #1a75ff 100%);
+  box-shadow: 0 24px 36px -12px rgba(0, 94, 255, 0.35);
 }
 .button-big.blue:not([disabled]):active {
-  background: linear-gradient(0deg,rgba(var(--color-system-white),.4),rgba(var(--color-system-white),.4)),radial-gradient(90.57% 139.63% at 94.34% 6.25%,#1a8cff 0,#1a75ff 100%);
+  background: linear-gradient(0deg, rgba(var(--color-system-white), 0.4), rgba(var(--color-system-white), 0.4)),
+    radial-gradient(90.57% 139.63% at 94.34% 6.25%, #1a8cff 0, #1a75ff 100%);
   box-shadow: none;
 }
 .button-big.blue[disabled] {
@@ -233,13 +235,13 @@ section .block .descr {
 
 .button-big.white:not([disabled]) {
   background: none;
-  border: 2px solid rgba(var(--color-system-white),.8);
+  border: 2px solid rgba(var(--color-system-white), 0.8);
 }
 .button-big.white:not([disabled]):hover {
-  background: rgba(var(--color-system-white),.2);
+  background: rgba(var(--color-system-white), 0.2);
 }
 .button-big.white:not([disabled]):active {
-  background: rgba(var(--color-system-white),.4);
+  background: rgba(var(--color-system-white), 0.4);
 }
 .button-big.white[disabled] {
   color: var(--wasd-color-text-disabled);
@@ -252,20 +254,22 @@ section .block .descr {
   padding: 12px 24px;
   border-radius: 16px;
   color: rgb(var(--color-system-white));
-  transition: all .1s;
+  transition: all 0.1s;
 }
 
 .button-small.blue:not([disabled]) {
   border: none;
-  background: radial-gradient(90.57% 139.63% at 94.34% 6.25%,#59acff 0,#1a75ff 100%);
-  box-shadow: 0 18px 30px -12px rgba(0,94,255,.35);
+  background: radial-gradient(90.57% 139.63% at 94.34% 6.25%, #59acff 0, #1a75ff 100%);
+  box-shadow: 0 18px 30px -12px rgba(0, 94, 255, 0.35);
 }
 .button-small.blue:not([disabled]):hover {
-  background: linear-gradient(0deg,rgba(var(--color-system-white),.2),rgba(var(--color-system-white),.2)),radial-gradient(90.57% 139.63% at 94.34% 6.25%,#1a8cff 0,#1a75ff 100%);
-  box-shadow: 0 24px 36px -12px rgba(0,94,255,.35);
+  background: linear-gradient(0deg, rgba(var(--color-system-white), 0.2), rgba(var(--color-system-white), 0.2)),
+    radial-gradient(90.57% 139.63% at 94.34% 6.25%, #1a8cff 0, #1a75ff 100%);
+  box-shadow: 0 24px 36px -12px rgba(0, 94, 255, 0.35);
 }
 .button-small.blue:not([disabled]):active {
-  background: linear-gradient(0deg,rgba(var(--color-system-white),.4),rgba(var(--color-system-white),.4)),radial-gradient(90.57% 139.63% at 94.34% 6.25%,#1a8cff 0,#1a75ff 100%);
+  background: linear-gradient(0deg, rgba(var(--color-system-white), 0.4), rgba(var(--color-system-white), 0.4)),
+    radial-gradient(90.57% 139.63% at 94.34% 6.25%, #1a8cff 0, #1a75ff 100%);
   box-shadow: none;
 }
 .button-small.blue[disabled] {
@@ -274,13 +278,13 @@ section .block .descr {
 
 .button-small.white:not([disabled]) {
   background: none;
-  border: 2px solid rgba(var(--color-system-white),.8);
+  border: 2px solid rgba(var(--color-system-white), 0.8);
 }
 .button-small.white:not([disabled]):hover {
-  background: rgba(var(--color-system-white),.2);
+  background: rgba(var(--color-system-white), 0.2);
 }
 .button-small.white:not([disabled]):active {
-  background: rgba(var(--color-system-white),.4);
+  background: rgba(var(--color-system-white), 0.4);
 }
 .button-small.white[disabled] {
   color: var(--wasd-color-text-disabled);
@@ -296,7 +300,7 @@ section .block .descr {
 }
 
 .button {
-  font-family: Montserrat,sans-serif;
+  font-family: Montserrat, sans-serif;
   flex-direction: row;
   align-items: center;
   justify-content: center;
@@ -346,7 +350,6 @@ a {
   border: solid 1px var(--wasd-color-text-disabled);
 }
 
-
 /* emotes */
 .emotes {
   display: flex !important;
@@ -355,7 +358,6 @@ a {
   justify-content: center;
   width: 100%;
 }
-
 
 /*  */
 .question-section .items {
@@ -376,7 +378,7 @@ a {
   height: -moz-max-content;
   height: max-content;
   background-color: #142340;
-  box-shadow: 0 4px 8px rgba(var(--color-system-black),.16);
+  box-shadow: 0 4px 8px rgba(var(--color-system-black), 0.16);
   border-radius: 16px;
   font-size: 16px;
   line-height: 22px;
@@ -411,12 +413,10 @@ a {
     width: 100% !important;
     margin-bottom: 40px;
   }
-
 }
 
-
 .text-center {
-  text-align: center!important;
+  text-align: center !important;
 }
 .d-flex {
   display: flex;
@@ -440,7 +440,7 @@ a {
 @media (max-width: 639px) {
   .main-section .block {
     order: 1;
-  } 
+  }
 
   .slideshow-img {
     height: 56.5vw;
@@ -503,7 +503,7 @@ a {
 }
 
 .page-link {
-  padding: .375rem .75rem;
+  padding: 0.375rem 0.75rem;
 }
 
 .page-link {
@@ -513,7 +513,7 @@ a {
   text-decoration: none;
   background-color: #142340;
   border: 1px solid #dee2e6;
-  transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
 .page-link:hover {
@@ -522,39 +522,38 @@ a {
   border-color: #dee2e6;
 }
 
-[role=button] {
+[role="button"] {
   cursor: pointer;
 }
 
 input.blur {
   color: transparent !important;
-  text-shadow: 0 0 6px rgba(var(--wasd-color-switch--rgb),0.5);
+  text-shadow: 0 0 6px rgba(var(--wasd-color-switch--rgb), 0.5);
 }
 
 button {
   cursor: pointer;
 }
 
-.disabled, [disabled] {
+.disabled,
+[disabled] {
   pointer-events: none;
   cursor: default;
 }
 
 .error {
-  color: var(--wasd-color-warning)
+  color: var(--wasd-color-warning);
 }
 
-
-
-wasd-input[ovg] {
+wasd-input {
   width: 100%;
 }
 
-.wasd-input-wrapper[ovg] .wasd-input .show {
+.wasd-input-wrapper .wasd-input .show {
   opacity: 1 !important;
 }
 
-.wasd-input-wrapper[ovg] {
+.wasd-input-wrapper {
   align-items: flex-start;
   display: flex;
   flex-direction: row;
@@ -563,7 +562,7 @@ wasd-input[ovg] {
   width: 100%;
 }
 
-.wasd-input-wrapper[ovg] .wasd-input[ovg] {
+.wasd-input-wrapper .wasd-input {
   caret-color: var(--wasd-color-corp-blue);
   display: flex;
   flex-direction: column;
@@ -571,25 +570,26 @@ wasd-input[ovg] {
   position: relative;
 }
 
-.wasd-input-wrapper[ovg] .wasd-input[ovg] label[ovg] {
+.wasd-input-wrapper .wasd-input label {
   align-items: center;
-  color: rgba(var(--wasd-color-switch--rgb), .64);
+  color: rgba(var(--wasd-color-switch--rgb), 0.64);
   display: flex;
   font-size: 12px;
   height: 14px;
   opacity: 0;
-  transition: opacity .5s;
+  transition: opacity 0.5s;
 }
 
-.wasd-input-wrapper[ovg] .wasd-input[ovg] input.has-button[ovg] {
+.wasd-input-wrapper .wasd-input input.has-button {
   padding-right: 28px;
 }
 
-.wasd-input-wrapper[ovg] .wasd-input[ovg] input[ovg],
-.wasd-input-wrapper[ovg] .wasd-input[ovg] textarea[ovg],
-.wasd-input-wrapper[ovg] .wasd-input[ovg] select {
+.wasd-input-wrapper .wasd-input input,
+.wasd-input-wrapper .wasd-input textarea,
+.wasd-input-wrapper .wasd-input select {
   background-color: var(--color-second-layer);
   border: 1px solid var(--wasd-color-text-fourth);
+  transition: all 100ms;
   border-radius: 4px;
   box-sizing: border-box;
   color: var(--wasd-color-switch);
@@ -605,12 +605,12 @@ wasd-input[ovg] {
   resize: vertical;
 }
 
-.wasd-input-wrapper[ovg] .wasd-input[ovg] input[ovg],
-.wasd-input-wrapper[ovg] .wasd-input[ovg] textarea[ovg] {
+.wasd-input-wrapper .wasd-input input,
+.wasd-input-wrapper .wasd-input textarea {
   padding: 10px;
 }
 
-.wasd-input-wrapper[ovg] .wasd-input[ovg] button[ovg] {
+.wasd-input-wrapper .wasd-input button {
   height: 24px;
   left: auto;
   position: absolute;
@@ -619,41 +619,37 @@ wasd-input[ovg] {
   width: 24px;
 }
 
-button.button-icon[ovg] {
+button.button-icon {
   cursor: auto;
   padding: unset;
   background: none;
 }
 
-i[ovg] {
-  color: rgba(var(--wasd-color-switch--rgb), .64);
+i {
+  color: rgba(var(--wasd-color-switch--rgb), 0.64);
   font-size: 12px;
 }
 
-.wasd-input-wrapper[ovg] .wasd-input[ovg] input[ovg]:hover,
-.wasd-input-wrapper[ovg] .wasd-input[ovg] select:hover,
-.wasd-input-wrapper[ovg] .wasd-input[ovg] textarea[ovg]:hover {
+.wasd-input-wrapper .wasd-input input:hover,
+.wasd-input-wrapper .wasd-input select:hover,
+.wasd-input-wrapper .wasd-input textarea:hover {
   border: 1px solid var(--wasd-color-text-prime);
 }
 
-.wasd-input-wrapper[ovg] .wasd-input[ovg] input[ovg]:active,
-.wasd-input-wrapper[ovg] .wasd-input[ovg] input[ovg]:focus,
-
-.wasd-input-wrapper[ovg] .wasd-input[ovg] select:active,
-.wasd-input-wrapper[ovg] .wasd-input[ovg] select:focus,
-
-.wasd-input-wrapper[ovg] .wasd-input[ovg] textarea[ovg]:active,
-.wasd-input-wrapper[ovg] .wasd-input[ovg] textarea[ovg]:focus {
+.wasd-input-wrapper .wasd-input input:active,
+.wasd-input-wrapper .wasd-input input:focus,
+.wasd-input-wrapper .wasd-input select:active,
+.wasd-input-wrapper .wasd-input select:focus,
+.wasd-input-wrapper .wasd-input textarea:active,
+.wasd-input-wrapper .wasd-input textarea:focus {
   border: 1px solid var(--wasd-color-corp-blue);
-  box-shadow: 0 0 0 2px rgba(var(--wasd-color-corp-blue--rgb), .48);
+  box-shadow: 0 0 0 2px rgba(var(--wasd-color-corp-blue--rgb), 0.48);
 }
 
-button.button-icon[ovg]:active,
-button.button-icon[ovg]:hover {
+button.button-icon:active,
+button.button-icon:hover {
   background: transparent;
 }
-
-
 
 /* hide opacity in color-picker */
 .color-picker > div > div > .bar-wrap:nth-last-child(2) {
@@ -663,15 +659,13 @@ button.button-icon[ovg]:hover {
   display: none;
 }
 
-
-
 .warning input {
-  background-color: rgba(var(--wasd-color-warning--rgb), .25) !important;
+  background-color: rgba(var(--wasd-color-warning--rgb), 0.25) !important;
 }
 .warning input:focus {
   border: 1px solid rgb(var(--wasd-color-warning--rgb)) !important;
-  background-color: rgba(var(--wasd-color-warning--rgb), .25) !important;
-  box-shadow: 0 0 0 2px rgba(var(--wasd-color-warning--rgb), .48) !important;
+  background-color: rgba(var(--wasd-color-warning--rgb), 0.25) !important;
+  box-shadow: 0 0 0 2px rgba(var(--wasd-color-warning--rgb), 0.48) !important;
 }
 
 .hover-pointer * {
@@ -748,20 +742,15 @@ svg.search {
 /* Toastify */
 .Toastify .black-background {
   background: #142340;
-  box-shadow: 0 4px 8px rgba(var(--color-system-black),.16);
+  box-shadow: 0 4px 8px rgba(var(--color-system-black), 0.16);
   color: rgba(var(--color-system-white), 0.8);
 }
 .Toastify button {
   color: #f6f7f8;
-} 
-.Toastify .fancy-progress-bar {
-  background: linear-gradient(
-    to right,
-    #258fe5,
-    #258fe5
-  );
 }
-
+.Toastify .fancy-progress-bar {
+  background: linear-gradient(to right, #258fe5, #258fe5);
+}
 
 /* checkbox */
 
@@ -771,7 +760,7 @@ svg.search {
 
 input[type="checkbox"] {
   background-color: transparent;
-  border: 1px solid rgba(var(--color-switch),.64);
+  border: 1px solid rgba(var(--color-switch), 0.64);
   border-radius: 2px;
   box-sizing: border-box;
   height: 16px;
@@ -790,13 +779,15 @@ input[type="checkbox"]:checked:after {
 }
 
 input[type="checkbox"]:after {
-  -webkit-mask: url("data:image/svg+xml,%3Csvg width%3D%2216%22 height%3D%2216%22 viewBox%3D%220 0 16 16%22 fill%3D%22none%22 xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath fill-rule%3D%22evenodd%22 clip-rule%3D%22evenodd%22 d%3D%22M13.7941 3.49494C13.5208 3.22158 13.0776 3.22157 12.8042 3.49494L6.42452 9.87461L3.22037 6.67046C2.947 6.39709 2.50378 6.39709 2.23042 6.67046C1.95705 6.94383 1.95705 7.38704 2.23042 7.66041L5.85642 11.2864C5.88179 11.3118 5.90863 11.3348 5.93665 11.3555C6.21014 11.6273 6.65222 11.6268 6.92508 11.3539L13.7941 4.48489C14.0675 4.21153 14.0675 3.76831 13.7941 3.49494Z%22 fill%3D%22white%22%2F%3E%3C%2Fsvg%3E") no-repeat -1px 0;
+  -webkit-mask: url("data:image/svg+xml,%3Csvg width%3D%2216%22 height%3D%2216%22 viewBox%3D%220 0 16 16%22 fill%3D%22none%22 xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath fill-rule%3D%22evenodd%22 clip-rule%3D%22evenodd%22 d%3D%22M13.7941 3.49494C13.5208 3.22158 13.0776 3.22157 12.8042 3.49494L6.42452 9.87461L3.22037 6.67046C2.947 6.39709 2.50378 6.39709 2.23042 6.67046C1.95705 6.94383 1.95705 7.38704 2.23042 7.66041L5.85642 11.2864C5.88179 11.3118 5.90863 11.3348 5.93665 11.3555C6.21014 11.6273 6.65222 11.6268 6.92508 11.3539L13.7941 4.48489C14.0675 4.21153 14.0675 3.76831 13.7941 3.49494Z%22 fill%3D%22white%22%2F%3E%3C%2Fsvg%3E")
+    no-repeat -1px 0;
   -webkit-mask-size: cover;
   background-color: rgb(var(--color-system-white));
   background-size: 16px 16px;
   box-sizing: border-box;
   height: 13px;
-  mask: url("data:image/svg+xml,%3Csvg width%3D%2216%22 height%3D%2216%22 viewBox%3D%220 0 16 16%22 fill%3D%22none%22 xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath fill-rule%3D%22evenodd%22 clip-rule%3D%22evenodd%22 d%3D%22M13.7941 3.49494C13.5208 3.22158 13.0776 3.22157 12.8042 3.49494L6.42452 9.87461L3.22037 6.67046C2.947 6.39709 2.50378 6.39709 2.23042 6.67046C1.95705 6.94383 1.95705 7.38704 2.23042 7.66041L5.85642 11.2864C5.88179 11.3118 5.90863 11.3348 5.93665 11.3555C6.21014 11.6273 6.65222 11.6268 6.92508 11.3539L13.7941 4.48489C14.0675 4.21153 14.0675 3.76831 13.7941 3.49494Z%22 fill%3D%22white%22%2F%3E%3C%2Fsvg%3E") no-repeat -1px 0;
+  mask: url("data:image/svg+xml,%3Csvg width%3D%2216%22 height%3D%2216%22 viewBox%3D%220 0 16 16%22 fill%3D%22none%22 xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath fill-rule%3D%22evenodd%22 clip-rule%3D%22evenodd%22 d%3D%22M13.7941 3.49494C13.5208 3.22158 13.0776 3.22157 12.8042 3.49494L6.42452 9.87461L3.22037 6.67046C2.947 6.39709 2.50378 6.39709 2.23042 6.67046C1.95705 6.94383 1.95705 7.38704 2.23042 7.66041L5.85642 11.2864C5.88179 11.3118 5.90863 11.3348 5.93665 11.3555C6.21014 11.6273 6.65222 11.6268 6.92508 11.3539L13.7941 4.48489C14.0675 4.21153 14.0675 3.76831 13.7941 3.49494Z%22 fill%3D%22white%22%2F%3E%3C%2Fsvg%3E")
+    no-repeat -1px 0;
   mask-size: cover;
   width: 16px;
 }
