--- a/src/pages/Dashboard/Paint/preview.module.scss
+++ b/src/pages/Dashboard/Paint/preview.module.scss
@@ -32,6 +32,7 @@
   align-items: flex-start;
   font-size: 14px;
   font-weight: 400;
+  font-family: "Open Sans";
 
   .message {
     padding: 25px;
