o pre-load a admin paint tool c nav-drop a bells

--- a/src/components/UI/Navbar/navbar.scss
+++ b/src/components/UI/Navbar/navbar.scss
@@ -1,4 +1,4 @@
-.root {
+.nav__wrapper {
   z-index: 2;
   max-width: 948px;
   margin: 0 auto;
@@ -43,7 +43,7 @@
       }
     }
 
-    img {
+    .nav-img {
       width: 150px;
     }
 
@@ -101,12 +101,6 @@
       margin-right: 5px;
       border-radius: 20px;
     }
-    .user-role {
-      padding-right: 10px;
-      color: #9d2d2d;
-      position: absolute;
-      right: 100%;
-    }
   }
 }
 
@@ -131,20 +125,37 @@
   position: absolute;
   inset: 0px auto auto 0px;
   transform: translate(35px, 22px);
-}
 
-.item {
-  color: rgba(var(--color-system-white), 0.64);
-  padding: 5px;
-  display: flex;
-  align-items: center;
-  cursor: pointer;
+  .item {
+    color: rgba(var(--color-system-white), 0.64);
+    padding: 5px;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
 
-  &-mobile {
-    display: none;
+    &-mobile {
+      display: none;
+    }
+
+    .avatar {
+      width: 20px;
+      height: 20px;
+      background-position: center;
+      background-size: cover;
+      margin-right: 5px;
+      border-radius: 20px;
+    }
+
+    &:hover {
+      background-color: rgba(255, 255, 255, 0.1);
+    }
+
+    &:active {
+      background-color: rgba(255, 255, 255, 0.3);
+    }
   }
 
-  .avatar {
+  .dropdown-avatar {
     width: 20px;
     height: 20px;
     background-position: center;
@@ -153,35 +164,18 @@
     border-radius: 20px;
   }
 
-  &:hover {
-    background-color: rgba(255, 255, 255, 0.1);
+  .divider {
+    margin-bottom: 0.2rem;
+    margin-top: 0.2rem;
+    border: 0;
+    border-top: 1px solid #434857;
   }
 
-  &:active {
-    background-color: rgba(255, 255, 255, 0.3);
+  .svg {
+    width: 15px;
+    height: 15px;
+    margin: 0 5px;
   }
-}
-
-.dropdown-avatar {
-  width: 20px;
-  height: 20px;
-  background-position: center;
-  background-size: cover;
-  margin-right: 5px;
-  border-radius: 20px;
-}
-
-.divider {
-  margin-bottom: 0.2rem;
-  margin-top: 0.2rem;
-  border: 0;
-  border-top: 1px solid #434857;
-}
-
-.svg {
-  width: 15px;
-  height: 15px;
-  margin: 0 5px;
 }
 
 @media screen and (max-width: 1060px) {
