--- a/src/App.css
+++ b/src/App.css
@@ -20,8 +20,7 @@ body {
   overflow: hidden;
 }
 
-.wrapper,
-.loading--screen {
+.wrapper {
   height: 100%;
   margin-top: 0;
   padding: 0 10px;
@@ -33,8 +32,7 @@ body {
   position: absolute;
 }
 
-.wrapper:not(.alert_mode),
-.loading--screen:not(.alert_mode) {
+.wrapper:not(.alert_mode) {
   background-color: #0a1730;
 }
 .wrapper.uninstall_mode {
@@ -805,11 +803,32 @@ input[type="checkbox"]:after {
 }
 
 /* app animations */
-.loading--app {
-  display: flex;
-  justify-content: center;
+.loader-wrapper {
+  background-color: #0a1730;
+  /* background-color: #fff; */
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
+  z-index: 1000;
+}
+
+.loader-content {
+  display: block;
+  position: relative;
+  left: 50%;
+  top: 50%;
+  width: 150px;
+  max-width: 80%;
+  max-height: 80%;
+  margin: -50px 0 0 -75px;
+  text-align: center;
+  font-size: 13px;
+}
+
+.loader-image {
+  width: 100%;
 }
 
 .list-transition-exit-active {
