--- a/src/pages/Uninstall/index.scss
+++ b/src/pages/Uninstall/index.scss
@@ -38,6 +38,6 @@ textarea {
   border-radius: 0;
   -webkit-appearance: none;
   outline: none;
-  font-family: Roboto-Regular, Arial, Helvetica Neue, Helvetica, sans-serif;
+  font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
   font-size: 14px;
 }
