--- a/src/components/UI/AlertBox/custom.css
+++ b/src/components/UI/AlertBox/custom.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@800&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@800&display=swap");
 
 .widget-AlertBox {
   position: relative;
@@ -61,7 +60,6 @@ html {
   z-index: 6;
   position: relative;
 }
-
 
 #widget {
   position: fixed;
