--- a/src/components/UI/TabGroupV2/style.scss
+++ b/src/components/UI/TabGroupV2/style.scss
@@ -41,7 +41,7 @@
       border: none;
       align-items: center;
       border-radius: 4px;
-      color: var(--color-system-white);
+      color: #ffffff;
       cursor: pointer;
       display: flex;
       font-size: 14px;
