--- a/src/components/UI/Slider/slider.scss
+++ b/src/components/UI/Slider/slider.scss
@@ -339,7 +339,8 @@ input[type="range"].range-slider::-ms-tooltip {
 
 .range-slider__wrap {
   position: relative;
-  display: block;
+  display: flex;
+  align-items: center;
   height: calc(1.5em + 0.75rem + 2px);
 }
 .range-slider__wrap .range-slider__tooltip {
@@ -352,6 +353,7 @@ input[type="range"].range-slider::-ms-tooltip {
   opacity: 0;
   transition: opacity 0.15s linear;
   z-index: 1070;
+  pointer-events: none;
 }
 .range-slider__wrap .range-slider__tooltip.range-slider__tooltip--top {
   bottom: calc(0.75em + 0.375rem + 1px + 0.4rem + 10px + 3px);
@@ -380,7 +382,7 @@ input[type="range"].range-slider::-ms-tooltip {
   opacity: 0.9;
   border-radius: 0.25rem;
   box-sizing: border-box;
-  font-size: 0.875rem;
+  font-size: 12px;
   white-space: nowrap;
 }
 .range-slider__wrap .range-slider__tooltip .range-slider__tooltip__caret {
