--- a/src/components/UI/AlertBox/style.css
+++ b/src/components/UI/AlertBox/style.css
@@ -76,3 +76,11 @@
 .hidden {
   opacity: 0;
 }
+
+.widget-AlertBox #alert-image video {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
