--- a/src/App.css
+++ b/src/App.css
@@ -25,8 +25,10 @@ body {
   flex-direction: column;
   position: absolute;
 }
-
-.wrapper:not(.alert_mode) {
+.wrapper.chat_mode {
+  padding: 0 !important;
+}
+.wrapper:not(.alert_mode):not(.chat_mode) {
   background-color: #0a1730;
 }
 .wrapper.uninstall_mode {
