--- a/src/components/UI/Emote/emote.module.scss
+++ b/src/components/UI/Emote/emote.module.scss
@@ -57,7 +57,7 @@
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
   text-align: center;
-  width: auto;
+  width: 100%;
   height: auto;
   position: relative;
   min-width: -webkit-fill-available;
